* Added code to the getPage method of the admin.pages.EnableGroup class.
* Added missing setDisable method on the group config class.
* Deleted old enableGroup and switchTracker proxy manager methods and replaced
them with a switchGroup method.
* Renamed Editor start and stop to being and finish, respectively.
* Fixed redirect msg in EnableGroup.
* Added enable attributes to manager checks.

2008.07.03 oubiwann

* Added additional group methods for use by the weighted algorithm (including
some convenience methods that didn't end up going into the algorithm).
* Added an algorithm for weighted loadbalancing.
* Added support for host weights in the config.
* Fixed the call to islice to include the None parameter.
* Changed the weight keys in model.ProxyGroup to use (host, port).
* Fixed nextHost to only setup populations with enabled hosts.
* Added support for weights in
application.director.configuredProxyManagerFactory.
* Forced weight values to be integers in the config class.
* Updated docs.
* Removed a line of testing code that got committed accidentally.
* Added a caveat to the schedulers.txt file.
* Added a utility for recursivly representing an an object.
* Removed the code the re-built the running config for display in the browser.
* Running config is now displayed via the recursive object repr utility.
* Updated TODO.
* Added toXML() method to the host config object.
* Added toXML() method to the group config object.
* Changed the scheduler type objects to be strings instead of integers so that
a lookup wasn't needed for converting to XML.
* Added toXML() method to the service config object.
* Fixed the brokenness with enabling groups in XML.
* Updated TODO with a strategy for the badly implemented "bad host" code.

2008.06.29 oubiwann

* Updated comments in application.service.
* Updated the TODO with another exploratory feature (live addition of proxied
hosts).
* Updated the TODO with another note.
* Updated the docstrings in admin.pages.
* Updated TODO.