@@ -41,6 +41,7 @@ them with a switchGroup method.
 * Renamed Editor start and stop to being and finish, respectively.
 * Fixed redirect msg in EnableGroup.
 * Added enable attributes to manager checks.
+* Fixed the toXML() config methods to output XML in the same order.
 
 2008.07.03 oubiwann
 
